test/errors/list/copy_bad_type.np
l = [1]
l2: List[str] = l.copy()
